--- a/src/main/resources/latke.properties
+++ b/src/main/resources/latke.properties
@@ -24,11 +24,15 @@
 
 #### Server ####
 # Browser visit protocol
-serverScheme=http
+serverScheme=https
 # Browser visit domain name
 serverHost=zhenziren.com
 # Browser visit port, 80 as usual, THIS IS NOT SERVER LISTEN PORT!
-serverPort=8080
+serverPort=443
+
+#dev
+#serverHost=localhost
+#serverPort=8080
 
 #### Cookie ####
 cookieName=solo
