--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ solo.iml
 /.settings/
 /.classpath
 /.project
+/src/main/webapp/baidu_verify_YR3TetzNR9.html
+/src/main/webapp/baidu_verify_STgGCk66dn.html
+/src/main/webapp/jd_root.txt
