--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -24,9 +24,9 @@
 
 mail.user=
 mail.password=
-mail.debug=false
-mail.smtp.host=smtp.gmail.com
-mail.smtp.port=587
+mail.debug=true
+mail.smtp.host=smtp.163.com
+mail.smtp.port=25
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.socketFactory.fallback=false
 mail.smtp.socketFactory.port=465
